[gd_scene load_steps=2 format=3 uid="uid://c7x1li6aoclli"]

[ext_resource type="Script" path="res://scenes/agieditor/picture/picture_viewer.gd" id="1_xd0lp"]

[node name="picture_viewer" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_xd0lp")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 759.0
offset_bottom = 465.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Picture"

[node name="OptionButtonPictures" type="OptionButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="CheckBoxPriority" type="CheckBox" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Show Priority Layer"

[node name="TextureRectPicture" type="TextureRect" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
stretch_mode = 2

[connection signal="item_selected" from="PanelContainer/VBoxContainer/HBoxContainer/OptionButtonPictures" to="." method="_on_option_button_pictures_item_selected"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer/CheckBoxPriority" to="." method="_on_check_box_priority_toggled"]
